--- a/index.html
+++ b/index.html
@@ -18,13 +18,57 @@
                 <a href="#" class="header__nav--btn">Sign In</a>
                 <a href="#" class="btn-main header__btn">Sign Up</a>
             </nav>
-            <div class="col-7 header__info">
-                <h1 class="heading-primary">All your files in one secure location, accessible anywhere.</h1>
-                <a href="#" class="btn-main header__info--btn">Get Started</a>
+            <div class="col-12 header__main">
+                <div class="header__info">
+                    <h1 class="heading-primary">All your files in one secure location, accessible anywhere.</h1>
+                    <a href="#" class="btn-main header__info--btn">Get Started</a>
+                </div>
+                <div class="header__banner">&nbsp;</div>
             </div>
-            <div class="col-5 header__banner">&nbsp;</div>
         </div>
     </header>
+    <div class="flex-container">
+        <section class="products">
+            <h2 class="col-12 heading-secondary">Stay Productive, Wherever You Are</h2>
+            <div class="products__banner">&nbsp;</div>
+            <div class="products__box">
+                <div class="col-6 products__product">
+                    <h3 class="heading-tertiary">All platforms, all devices, all your files</h3>
+                    <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        eligendi hic odio modi dicta, cum cumque.</p>
+                </div>
+                <div class="col-6 products__product">
+                    <h3 class="heading-tertiary">Real-time collaboration</h3>
+                    <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        eligendi hic odio modi dicta, cum cumque.</p>
+                </div>
+                <div class="col-6 products__product">
+                    <h3 class="heading-tertiary">Security you can trust</h3>
+                    <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        eligendi hic odio modi dicta, cum cumque.</p>
+                </div>
+                <div class="col-6 products__product">
+                    <h3 class="heading-tertiary">Automatic backups</h3>
+                    <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        eligendi hic odio modi dicta, cum cumque.</p>
+                </div>
+            </div>
+            <div class="col-12">
+                <h2 class="heading-secondary">Get early access today</h2>
+                <p class="products__text">It only takes a minute to sign up and our free starter is extremely generous.
+                    If
+                    you have any questions, our support team would be happy to help you.</p>
+                <form class="products__form">
+                    <input type="email" placeholder="email@example.com" required>
+                    <button class="btn-main">Join</button>
+                </form>
+            </div>
+        </section>
+    </div>
 </body>
 
 </html>
