--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     you have any questions, our support team would be happy to help you.</p>
                 <form class="products__form">
                     <input type="email" placeholder="email@example.com" required>
-                    <button class="btn-main">Join</button>
+                    <button class="btn-main products__form--btn">Join</button>
                 </form>
             </div>
         </section>
