--- a/index.html
+++ b/index.html
@@ -69,6 +69,48 @@
             </div>
         </section>
     </div>
+    <footer class="footer">
+        <div class="flex-container">
+            <div class="footer__contact">
+                <img src="images/logo.svg" alt="logo" class="footer__contact--logo">
+                <a href="tel:15431234567">
+                    <img src="images/icon-phone.svg" alt="icon-phone">
+                    <span>Phone: +1-543-123-4567</span>
+                </a>
+                <a href="mailto:example@fylo.com">
+                    <img src="images/icon-email.svg" alt="icon-email">
+                    <span>example@fylo.com</span>
+                </a>
+            </div>
+            <div class="footer__more">
+                <ul>
+                    <li>Fylo</li>
+                    <li>Desktop App</li>
+                    <li>Mobile App</li>
+                    <li>Pricing</li>
+                    <li>Feature</li>
+                </ul>
+                <ul>
+                    <li>Company</li>
+                    <li>About us</li>
+                    <li>Jobs</li>
+                    <li>Press</li>
+                    <li>Blog</li>
+                </ul>
+                <ul>
+                    <li>Support</li>
+                    <li>Contact Us</li>
+                    <li>Terms</li>
+                    <li>Privacy</li>
+                </ul>
+            </div>
+            <form action="#" class="footer__form">
+                <p>Receive updates from us, including tips and tricks on kow to improve your workflow.</p>
+                <input type="text">
+                <button class="btn-main">Join</button>
+            </form>
+        </div>
+    </footer>
 </body>
 
 </html>
