--- a/index.html
+++ b/index.html
@@ -83,25 +83,25 @@
                 </a>
             </div>
             <div class="footer__more">
-                <ul>
-                    <li>Fylo</li>
-                    <li>Desktop App</li>
-                    <li>Mobile App</li>
-                    <li>Pricing</li>
-                    <li>Feature</li>
+                <ul class="footer__more--ul">
+                    <li class="footer__more--li">Fylo</li>
+                    <li class="footer__more--li">Desktop App</li>
+                    <li class="footer__more--li">Mobile App</li>
+                    <li class="footer__more--li">Pricing</li>
+                    <li class="footer__more--li">Feature</li>
                 </ul>
-                <ul>
-                    <li>Company</li>
-                    <li>About us</li>
-                    <li>Jobs</li>
-                    <li>Press</li>
-                    <li>Blog</li>
+                <ul class="footer__more--ul">
+                    <li class="footer__more--li">Company</li>
+                    <li class="footer__more--li">About us</li>
+                    <li class="footer__more--li">Jobs</li>
+                    <li class="footer__more--li">Press</li>
+                    <li class="footer__more--li">Blog</li>
                 </ul>
-                <ul>
-                    <li>Support</li>
-                    <li>Contact Us</li>
-                    <li>Terms</li>
-                    <li>Privacy</li>
+                <ul class="footer__more--ul">
+                    <li class="footer__more--li">Support</li>
+                    <li class="footer__more--li">Contact Us</li>
+                    <li class="footer__more--li">Terms</li>
+                    <li class="footer__more--li">Privacy</li>
                 </ul>
             </div>
             <form action="#" class="footer__form">
