--- a/index.html
+++ b/index.html
@@ -11,22 +11,28 @@
 </head>
 
 <body>
-    <header class="header">
-        <div class="flex-container">
+    <div class="flex-container">
+        <header class="header">
             <nav class="col-12 header__nav">
                 <img src="images/logo.svg" alt="logo" class="header__nav--logo">
                 <a href="#" class="header__nav--btn">Sign In</a>
                 <a href="#" class="btn-main header__btn">Sign Up</a>
             </nav>
-            <div class="col-12 header__main">
-                <div class="header__info">
-                    <h1 class="heading-primary">All your files in one secure location, accessible anywhere.</h1>
-                    <a href="#" class="btn-main header__info--btn">Get Started</a>
+        </header>
+    </div>
+    <main>
+        <section class="banner">
+            <div class="flex-container">
+                <div class="col-12 banner__main">
+                    <div class="banner__info">
+                        <h1 class="heading-primary">All your files in one secure location, accessible anywhere.</h1>
+                        <a href="#" class="btn-main banner__info--btn">Get Started</a>
+                    </div>
+                    <div class="banner__banner">&nbsp;</div>
                 </div>
-                <div class="header__banner">&nbsp;</div>
             </div>
-        </div>
-    </header>
+        </section>
+    </main>
     <div class="flex-container">
         <section class="products">
             <h2 class="col-12 heading-secondary">Stay Productive, Wherever You Are</h2>
@@ -35,31 +41,36 @@
                 <div class="col-6 products__product">
                     <h3 class="heading-tertiary">All platforms, all devices, all your files</h3>
                     <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum,
+                        tempora
                         eligendi hic odio modi dicta, cum cumque.</p>
                 </div>
                 <div class="col-6 products__product">
                     <h3 class="heading-tertiary">Real-time collaboration</h3>
                     <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum,
+                        tempora
                         eligendi hic odio modi dicta, cum cumque.</p>
                 </div>
                 <div class="col-6 products__product">
                     <h3 class="heading-tertiary">Security you can trust</h3>
                     <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum,
+                        tempora
                         eligendi hic odio modi dicta, cum cumque.</p>
                 </div>
                 <div class="col-6 products__product">
                     <h3 class="heading-tertiary">Automatic backups</h3>
                     <p class="products__product--text">Lorem, ipsum dolor sit amet consectetur adipisicing elit.
-                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum, tempora
+                        Debitis velit officiis perferendis inventore minima perspiciatis explicabo nihil rerum,
+                        tempora
                         eligendi hic odio modi dicta, cum cumque.</p>
                 </div>
             </div>
             <div class="col-12">
                 <h2 class="heading-secondary">Get early access today</h2>
-                <p class="products__text">It only takes a minute to sign up and our free starter is extremely generous.
+                <p class="products__text">It only takes a minute to sign up and our free starter is extremely
+                    generous.
                     If
                     you have any questions, our support team would be happy to help you.</p>
                 <form class="products__form">
@@ -105,9 +116,11 @@
                 </ul>
             </div>
             <form action="#" class="footer__form">
-                <p>Receive updates from us, including tips and tricks on kow to improve your workflow.</p>
-                <input type="text">
-                <button class="btn-main">Join</button>
+                <p class="footer__form--text">Receive updates from us, including tips and tricks on kow to improve
+                    your
+                    workflow.</p>
+                <input type="text" class="footer__form--input">
+                <button class="btn-main footer__form--btn">Join</button>
             </form>
         </div>
     </footer>
