--- a/index.html
+++ b/index.html
@@ -96,23 +96,23 @@
             <div class="footer__more">
                 <ul class="footer__more--ul">
                     <li class="footer__more--li">Fylo</li>
-                    <li class="footer__more--li">Desktop App</li>
-                    <li class="footer__more--li">Mobile App</li>
-                    <li class="footer__more--li">Pricing</li>
-                    <li class="footer__more--li">Feature</li>
+                    <li class="footer__more--li"><a href="#">Desktop</a></li>
+                    <li class="footer__more--li"><a href="#">Mobile App</a></li>
+                    <li class="footer__more--li"><a href="#">Pricing</a></li>
+                    <li class="footer__more--li"><a href="#">Feature</a></li>
                 </ul>
                 <ul class="footer__more--ul">
                     <li class="footer__more--li">Company</li>
-                    <li class="footer__more--li">About us</li>
-                    <li class="footer__more--li">Jobs</li>
-                    <li class="footer__more--li">Press</li>
-                    <li class="footer__more--li">Blog</li>
+                    <li class="footer__more--li"><a href="#">About us</a></li>
+                    <li class="footer__more--li"><a href="#">Jobs</a></li>
+                    <li class="footer__more--li"><a href="#">Press</a></li>
+                    <li class="footer__more--li"><a href="#">Blog</a></li>
                 </ul>
                 <ul class="footer__more--ul">
                     <li class="footer__more--li">Support</li>
-                    <li class="footer__more--li">Contact Us</li>
-                    <li class="footer__more--li">Terms</li>
-                    <li class="footer__more--li">Privacy</li>
+                    <li class="footer__more--li"><a href="#">Contact Us</a></li>
+                    <li class="footer__more--li"><a href="#">Terms</a></li>
+                    <li class="footer__more--li"><a href="#">Privacy</a></li>
                 </ul>
             </div>
             <form action="#" class="footer__form">
