--- a/index.html
+++ b/index.html
@@ -83,7 +83,9 @@
     <footer class="footer">
         <div class="flex-container">
             <div class="footer__contact">
-                <img src="images/logo.svg" alt="logo" class="footer__contact--logo">
+                <div class="footer__contact--img">
+                    <img src="images/logo.svg" alt="logo">
+                </div>
                 <a href="tel:15431234567">
                     <img src="images/icon-phone.svg" alt="icon-phone">
                     <span>Phone: +1-543-123-4567</span>
