--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <div class="col-12 banner__main">
                     <div class="banner__info">
                         <h1 class="heading-primary">All your files in one secure location, accessible anywhere.</h1>
-                        <a href="#" class="btn-main banner__info--btn">Get Started</a>
+                        <a href="#" class="btn-main banner__info--btn btn--animated">Get Started</a>
                     </div>
                     <div class="banner__banner">&nbsp;</div>
                 </div>
@@ -121,7 +121,7 @@
                 <p class="footer__form--text">Receive updates from us, including tips and tricks on kow to improve
                     your
                     workflow.</p>
-                <input type="text" class="footer__form--input">
+                <input type="text" class="footer__form--input" required>
                 <button class="btn-main footer__form--btn">Join</button>
             </form>
         </div>
