html general font for smallest devices

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="flex-container">
             <section class="products">
                 <h2 class="col-12 heading-secondary">Stay Productive, Wherever You Are</h2>
-                <div class="products__banner">&nbsp;</div>
+                <div class="products__banner slide-in">&nbsp;</div>
                 <div class="products__box">
                     <div class="col-6 products__product">
                         <h3 class="heading-tertiary">All platforms, all devices, all your files</h3>
@@ -126,6 +126,7 @@
             </form>
         </div>
     </footer>
+    <script src="app.js"></script>
 </body>
 
 </html>
