--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
         <section class="banner">
             <div class="flex-container">
                 <div class="col-12 banner__main">
-                    <div class="banner__info">
+                    <div class="col-7 banner__info">
                         <h1 class="heading-primary">All your files in one secure location, accessible anywhere.</h1>
                         <a href="#" class="btn-main banner__info--btn btn--animated">Get Started</a>
                     </div>
-                    <div class="banner__banner">&nbsp;</div>
+                    <div class="col-5 banner__banner">&nbsp;</div>
                 </div>
             </div>
         </section>
